# Techcamp-team-vision

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  PLAN.md  README.md  config.yaml  pyproject.toml
app/: config.py  inference.py  main.py  preprocess.py
demo/: README.md  app.js  design.html  design01.html  index.html  index_legacy.html  style.css
nets/: coatnet.py  convnext.py  dwspgnet.py  mobilenetv3.py  mobileone.py  resnet.py  shufflenetv2.py  swin_transformer_v2.py  utils.py
scripts/: cache_video_frames.py  prepare_dataset.py  train.py
